--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -1,24 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg"
-    android:gravity="center"
     android:padding="24dp">
 
-    <!-- Admin Welcome Text -->
+    <!-- Logout icon -->
+    <ImageView
+        android:id="@+id/btnLogout"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/logouticon"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:padding="1dp"
+        android:contentDescription="Logout" />
+
+    <!--Title-->
     <TextView
+        android:id="@+id/tvHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="👑 Admin Dashboard"
+        android:text="Records"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:layout_marginBottom="30dp"
-        android:gravity="center"/>
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true" />
 
-    <!-- Admin Info -->
+    <!--Admin info-->
     <TextView
         android:id="@+id/tvAdminEmail"
         android:layout_width="wrap_content"
@@ -26,81 +37,24 @@
         android:text="Logged in as: admin@abc.com"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:layout_marginBottom="40dp"
-        android:gravity="center"/>
+        android:layout_below="@id/tvHeader"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true" />
 
-    <!-- Placeholder Message -->
-    <TextView
+    <!--FILTER-->
+    <Spinner
+        android:id="@+id/spinnerFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="🚧 Admin Dashboard Under Construction 🚧"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="italic"
-        android:gravity="center"
-        android:layout_marginBottom="40dp"
-        android:padding="20dp"
-        android:background="@drawable/rounded_edittext"/>
+        android:layout_below="@id/tvAdminEmail"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true" />
 
-    <!-- Coming Soon Features -->
-    <LinearLayout
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerLoans"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/rounded_edittext"
-        android:padding="20dp"
-        android:layout_marginBottom="40dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="📋 Coming Soon Features:"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• View all loan applications"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:layout_marginBottom="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• Approve/Disapprove loans"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:layout_marginBottom="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• View user records"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:layout_marginBottom="5dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• Generate reports"
-            android:textColor="@color/white"
-            android:textSize="14sp"/>
-    </LinearLayout>
-
-    <!-- Logout Button -->
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:background="@drawable/rounded_button"
-        android:text="Logout"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textAllCaps="false"/>
-
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/spinnerFilter"
+        android:layout_marginTop="16dp"/>
+</RelativeLayout>
