--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -13,8 +13,8 @@
         android:clickable="true"
         android:focusable="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="13dp"/>
     <!--Title-->
     <TextView
         android:id="@+id/tvHeader"
@@ -25,30 +25,40 @@
         android:textSize="28sp"
         android:textStyle="bold"
         android:background="@drawable/rounded_edittext"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
+        android:padding="9dp"
+        android:layout_marginTop="14dp"
         android:layout_centerHorizontal="true" />
-
-    <!--Admin info-->
     <TextView
-        android:id="@+id/tvAdminEmail"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logged in as: admin@abc.com"
+        android:text="List of User Loans"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:layout_below="@id/tvHeader"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="9dp"
         android:layout_centerHorizontal="true" />
 
-    <!--FILTER-->
+    <!-- White line -->
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/text"
+        android:background="@color/white" />
+
+    <!-- Filter Spinner -->
     <Spinner
         android:id="@+id/spinnerFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvAdminEmail"
-        android:layout_marginTop="16dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@id/view"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="end"
+        android:spinnerMode="dropdown"
+        android:popupBackground="@color/white"/>
+
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -57,4 +67,5 @@
         android:layout_height="match_parent"
         android:layout_below="@id/spinnerFilter"
         android:layout_marginTop="16dp"/>
+
 </RelativeLayout>
