--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,9 +78,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="User: firstname.lastname@abc.com"
+        android:textColor="@color/light_grey"
+        android:textSize="12sp"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Admin: admin@abc.com / admin"
         android:textColor="@color/light_grey"
         android:textSize="12sp"
         android:layout_marginTop="20dp"/>
+
+
 
 </LinearLayout>
