--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,5 @@
 
     <!-- Add these if needed -->
     <color name="orange">#FF9800</color>
-    <color name="red">#73211A</color>
+    <color name="red">#7A231C</color>
 </resources>
