--- a/app/src/main/res/layout/item_admin_main.xml
+++ b/app/src/main/res/layout/item_admin_main.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-        <!-- User ID -->
+        <!-- Employee ID -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,10 +54,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User ID: "
+                android:text="Employee ID: "
                 android:textStyle="bold"/>
             <TextView
-                android:id="@+id/txtUserID"
+                android:id="@+id/txtEmployeeID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
